bug/ visibilty conditional rendering fixed

--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,8 @@
   font-family: 'Ubuntu', sans-serif;
 }
 h1,h2,h3{
-  color: white;
+  color:white;
 }
-
   nav{
   width: 100%;
   height: 4.4rem;
@@ -278,13 +277,13 @@ button:hover{
   margin-bottom: 0.5rem;
   
 }
-.resume.topAlign h3{
+/* .resume.topAlign h3{
   font-family: 'Nunito', sans-serif;
   font-size: 16px;
   padding: 0.2rem;
   color: white;
-}
-.resume.leftAlign .accent h3,.resume.rightAlign .accent h3{
+} */
+.resume.leftAlign .accent > h3,.resume.rightAlign .accent > h3{
   font-family: 'Nunito', sans-serif;
   font-size: 16px;
   width: 100%;
@@ -292,7 +291,7 @@ button:hover{
   margin: auto;
   padding: 0.5rem 1rem;
 }
-.resume .resumeBody h2{
+.resume .resumeBody > h2{
   padding: 0.2rem;
   text-align: center;
   color: #0e374e;
@@ -300,7 +299,7 @@ button:hover{
   background-color: #eff1f3;
   margin: 2rem 0;
 }
-.resume .resumeBody h3{
+/* .resume .resumeBody */ .educationCR > h3{
   font-size: 16px;
   font-family: 'Nunito', sans-serif;
   color: black;
@@ -314,6 +313,7 @@ button:hover{
   margin: 1rem 0;
 }
 .educationCRL{
+  padding-left: 2rem;
   width: 35%;
 }
 .educationCRR{
